--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="#">minha escola</a>
         <main class="graficos-section">
             <section id="graficos-container" class="graficos-container">
+<!---crie os grsficos aqui -->
             </section>
         </main>
       <footer>
