--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redes Sociais</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-      <header></header>
-      <h1>relatorio das redes sociais</h1>
-      <main></main>
+      <header>
+        <h1>relatorio das redes sociais</h1>
       <nav>
         <a href="index.html">mundo</a>
         <a href="#">minha escola</a>
+        <nav>
+      </header>
+      
         <main class="graficos-section">
             <section id="graficos-container" class="graficos-container">
 <!---crie os grsficos aqui -->
@@ -21,5 +24,6 @@
       <footer>
         <p>desenvolvido por Bruna Ferraz</p>
       </footer>
+      <script type="module" src="graficos/informacoesGlobais.js"></script>
 </body>
 </html>
